--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     ></script>
   </head>
   <body>
+    <h1>mercedes-sls</h1>
     <div
       id="carouselExampleControls"
       class="carousel slide"
